tests/golden/type_errors/match_guard_wildcard_non_exhaustive.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
let label = match result {
  _ if true => "matched",
};
